--- a/modules/ROOT/pages/layers.adoc
+++ b/modules/ROOT/pages/layers.adoc
@@ -15,12 +15,11 @@ Map a node to a layer in the application's properties file, or using the UI in t
 
 === Set a Layer with Properties
 
-To automate the classification of nodes into layers, configure the property `anypoint.platform.visualizer.layer=<name>` in the application's properties file. Note that this is an application property, not a server property.
-
+To automate adding layer(s) to a node, use the property `anypoint.platform.visualizer.tags=<name>, <name>`` in the application’s properties file, or at deployment time through the Runtime Manager UI or API. Note that this is an application property, not a server property. You can only use the Runtime Manager UI or Cloudhub deployments.
 When you use this property, nodes automatically appear in the specified layer. If the layer doesn't exist, it is created.
 
 [NOTE]
-You cannot reassign a node layer using the Anypoint Visualizer UI if you assign it using application property file.
+You cannot reassign a node layer using the Anypoint Visualizer UI if you assign it using application property.
 
 [[set-a-layer-ui]]
 == Set a Layer with the Architecture visualization UI
