--- a/modules/ROOT/pages/connection-metrics-compatibility.adoc
+++ b/modules/ROOT/pages/connection-metrics-compatibility.adoc
@@ -3,7 +3,7 @@ ifndef::env-site,env-github[]
 include::_attributes.adoc[]
 endif::[]
 
-Connection level metrics, or _edge metrics_, are available for many of your connections in the Anypoint Visualizer canvas. Depending on your deployment type (CloudHub, Standalone Mule, or Runtime Fabric), some inbound or outbound metrics do not appear at the connection level. You can use this guide to determine why metrics may be absent from your canvas.
+Connection-level metrics, or _edge metrics_, are available for many of your connections in the Anypoint Visualizer canvas. Depending on your deployment type (CloudHub, standalone Mule, or Runtime Fabric), some inbound or outbound metrics do not appear at the connection level. You can use this guide to determine why metrics are absent from your canvas.
 
 Metric is Not Available:: Connections appear if there has been traffic between those services in the past 7 days. If there was no traffic for a particular edge in the time range selected on the *Metric* card, however, metrics will not appear on that edge. You may see this message in the card: `Inbound/Outbound metrics are not available for this connection. Learn more.`
 
