--- a/modules/ROOT/pages/connection-metrics-compatibility.adoc
+++ b/modules/ROOT/pages/connection-metrics-compatibility.adoc
@@ -29,11 +29,11 @@ The following connection types and directions support or do not support connecti
 
 | External Traffic to a Mule App
 | Yes
-| If there is a connection from external traffic to a Mule app and also a connection from a Mule app using Mule version 4.x before April 14, 2020 or an -AM extension to the same app, then the Mule-app-to-Mule-app edge metric does not appear; rather, it is averaged into the value shown on the edge from external traffic.
+| If there is a connection from external traffic to a Mule app and also a connection from a Mule app using Mule version 4.x released before April 14, 2020 or a Mule version with an -AM extension to the same app, then the Mule-app-to-Mule-app edge metric does not appear; rather, it is averaged into the value shown on the edge from external traffic.
 
 | Mule App to a Mule App
 | Yes
-| If the source node is a CloudHub app using Mule version 4.x before April 14, 2020 or an -AM extension, then metrics do not appear on that connection, and the following message appears:
+| If the source node is a CloudHub app using Mule version 4.x released before April 14, 2020 or a Mule version with an -AM extension, then metrics do not appear on that connection and the following message appears:
 
 `Inbound metrics may be inaccurate or not appear when the source of the connection is a Mule app using Mule runtime version 4.x or an -AM extension. Learn more.`
 
@@ -96,6 +96,8 @@ If the following conditions exist, then metrics do not appear for a connection:
 * The app uses a Mule 4.x version with Anypoint Monitoring Agent released before April 6, 2020
 * Additional header injection is not enabled
 
+Additionally, the following message appears:
+
 `Inbound metrics may be inaccurate or not appear when the source of the connection is a Mule app using Mule runtime version 4.x. Learn how to view connections and their metrics properly.`
 
 Learn more about xref:standalone-mule-setup.adoc#enable-header-injection[enabling the header injection].
@@ -146,7 +148,16 @@ The following connection types and directions support or do not support connecti
 
 | Mule App to a Mule App
 | Yes
-| If the source node is a Runtime Fabric app using HTTP connector below 1.5.12 on Mule version 4.x before April 7, 2020 and you have not enabled the additional header injection, then metrics do not appear on that connection, and the following message appears:
+a| 
+If the following conditions exist, then metrics do not appear for a connection:
+
+* The source node is a Runtime Fabric app
+* The app uses an HTTP Connector version earlier than 1.5.12
+* The app uses a Mule 4.x version with Anypoint Monitoring Agent released before April 6, 2020
+* Additional header injection is not enabled
+
+Additionally, the following message appears:
+
 
 `Inbound metrics may be inaccurate or not appear when the source of the connection is a Mule app using Mule runtime version 4.x. Learn how to view connections and their metrics properly.`
 
