--- a/modules/ROOT/pages/runtime-fabric-setup.adoc
+++ b/modules/ROOT/pages/runtime-fabric-setup.adoc
@@ -29,7 +29,7 @@ For Runtime Fabric, you must enable the header injection at the app level:
 * If you are deploying an app for the first time, navigate to the deployment page and click *Deploy application*.
 . In the *Properties* tab, set the following property in the app: `anypoint.platform.config.analytics.agent.header_injection.disabled=false`
 
-Additionally, you must use version 1.5.12 or higher of the HTTP connector in your Mule 4 applications.
+Additionally, you must use version 1.5.12 or later of the HTTP Connector in your Mule 4 applications.
 
 == Verify Supported Mule Runtime Engine (Mule) Versions for Policies
 
