--- a/modules/ROOT/pages/layers.adoc
+++ b/modules/ROOT/pages/layers.adoc
@@ -22,7 +22,7 @@ You cannot reassign a node layer using the Anypoint Visualizer UI if you assign 
 Setting the layer using the property file is not currently supported for Mule 4 runtimes. You can only use the Runtime Manager UI for Cloudhub and Runtime Fabric deployments.
 
 [[set-a-layer-ui]]
-== Set a Layer with the Architecture visualization UI
+== Set a Layer with the Architecture Visualization UI
 
 If a node was not assigned to a layer at deployment time using the Runtime Manager UI or API, by default, the node is not assigned to a layer in Anypoint Visualizer. Use the Anypoint Visualizer UI to:
 
