Apply suggestions from code review
Co-authored-by: Hanna Nelson <hanna.nelson@mulesoft.com>

--- a/modules/ROOT/pages/troubleshoot-visualizer.adoc
+++ b/modules/ROOT/pages/troubleshoot-visualizer.adoc
@@ -53,6 +53,6 @@ Metrics at the connection level are only available for certain types of connecti
 
 == Limitations
 
-=== Why can't I see the source of traffic from the Anypoint Connector for Database (Database Connector)?
+=== Why can't I see the source of traffic from Anypoint Connector for Database (Database Connector)?
 
-When you use the Anypoint Connector for Database (Database Connector), Anypoint Visualizer does not indicate whether traffic originates from a Postgres database, Oracle database, and so on. Additionally, Anypoint Visualizer cannot differentiate between instances of a database. 
+When you use Database Connector, Anypoint Visualizer does not indicate the type of database, such as Postgres or Oracle, from which the traffic originates. Additionally, Anypoint Visualizer cannot differentiate between instances of a database. 
