--- a/modules/ROOT/pages/troubleshoot-visualizer.adoc
+++ b/modules/ROOT/pages/troubleshoot-visualizer.adoc
@@ -55,4 +55,8 @@ Metrics at the connection level are only available for certain types of connecti
 
 === Why can't I see the source of traffic from Anypoint Connector for Database (Database Connector)?
 
-When you use Database Connector, Anypoint Visualizer does not indicate the type of database, such as Postgres or Oracle, from which the traffic originates. Additionally, Anypoint Visualizer cannot differentiate between instances of a database. 
+When you use Database Connector, Anypoint Visualizer does not indicate the type of database, such as Postgres or Oracle, from which the traffic originates. Additionally, Anypoint Visualizer cannot differentiate between instances of a database.
+
+=== Why can't I see metrics and connection information for some on-premises apps and APIs?
+
+include::partial$include-mule-domain-support.adoc[]
