--- a/modules/ROOT/pages/troubleshoot-visualizer.adoc
+++ b/modules/ROOT/pages/troubleshoot-visualizer.adoc
@@ -57,6 +57,6 @@ Metrics at the connection level are only available for certain types of connecti
 
 When you use Database Connector, Anypoint Visualizer does not indicate the type of database, such as Postgres or Oracle, from which the traffic originates. Additionally, Anypoint Visualizer cannot differentiate between instances of a database.
 
-=== Why can't I see metrics and connection information for some on-premises apps and APIs?
+=== Why do some on-premises apps and APIs show incorrect or incomplete metrics and connection information?
 
 include::partial$include-mule-domain-support.adoc[]
