DOCS-10220-create-and-implement-nav-partial

--- a/modules/ROOT/nav.adoc
+++ b/modules/ROOT/nav.adoc
@@ -4,7 +4,7 @@
  ** xref:cloudhub-setup.adoc[CloudHub Setup]
  ** xref:standalone-mule-setup.adoc[Standalone Mule Setup]
  ** xref:runtime-fabric-setup.adoc[Runtime Fabric Setup]
- ** xref:technical.adoc[Manage Performance and Data Collection]
+ ** xref:manage-performance.adoc[Manage Performance and Data Collection]
 * xref:visualizer-app-network.adoc[Visualizations by Use Case]
  ** xref:architecture-visualization.adoc[Architecture Visualization]
  ** xref:troubleshooting-visualization.adoc[Troubleshooting Visualization]
@@ -13,5 +13,5 @@
 * xref:customize-your-canvas.adoc[Customize the Canvas]
  ** xref:layers.adoc[Use Layers in Anypoint Visualizer]
  ** xref:use-tags-in-visualizer.adoc[Use Tags in Anypoint Visualizer]
-* xref:troubleshoot-visualizer.adoc[Troubleshoot Visualizer]
+* xref:troubleshoot-visualizer.adoc[Troubleshoot Anypoint Visualizer]
 * xref:connection-metrics-compatibility.adoc[Supported Connection-Level Metrics]
