--- a/modules/ROOT/pages/setup.adoc
+++ b/modules/ROOT/pages/setup.adoc
@@ -9,15 +9,15 @@ Configure the roles and permissions required to use Anypoint Visualizer and unde
 
 To view content in Anypoint Visualizer, you must be assigned a role that has one of the following permissions:
 
-* *Runtime Manager > Read Applications* 
+* *Runtime Manager > Read Applications*
 Enables a user to view the graph of an app network, but does not allow them to make changes.
 * *API Manager > View Policies or Manage Policies*
 Enables a user to view the APIs linked to their Mule applications and the policies applied to those APIs. Only relevant for the Policy Visualization.
-* *Visualizer > Visualizer Editor* 
+* *Visualizer > Visualizer Editor*
 Enables a user to manage and customize certain aspects of the visualization of an application network.
-You can create a xref:access-management::roles.adoc#custom-roles[custom role] and assign the *Visualizer Editor* permission to it.
+You can create a xref:access-management::roles.adoc#custom-roles[custom role] and assign the Visualizer Editor permission to it.
 [NOTE]
-The *Visualizer Editor* permission can only be assigned within the master organization.
+The *Visualizer Editor* permission can be assigned only within the master organization.
 
 == Select a Deployment Type
 
@@ -58,4 +58,4 @@ For Mule version 4.x, the following connectors are supported:
 
 The agent that Anypoint Visualizer uses to collect metadata sometimes has a performance impact.
 
-For more information about data collection and performance, see xref:visualizer::technical.adoc[Manage Performance and Data Collection].
+For more information about data collection and performance, see xref:visualizer::manage-performance.adoc[Manage Performance and Data Collection].
