--- a/modules/ROOT/pages/standalone-mule-setup.adoc
+++ b/modules/ROOT/pages/standalone-mule-setup.adoc
@@ -38,4 +38,4 @@ Additionally, you must use version 1.5.12 or later of the HTTP Connector in your
 
 The agent that Anypoint Visualizer uses to collect metadata sometimes has a performance impact.
 
-For more information about data collection and performance, see xref:visualizer::technical.adoc[Manage Performance and Data Collection].
+For more information about data collection and performance, see xref:visualizer::manage-performance.adoc[Manage Performance and Data Collection].
