--- a/modules/ROOT/pages/manage-performance.adoc
+++ b/modules/ROOT/pages/manage-performance.adoc
@@ -42,7 +42,7 @@ If you are using the following Mule versions, you can disable the Anypoint Monit
 * Mule Version 3.9 Released on April 5, 2019 or Later
 * Mule Version 3.8.7 Released on August 14, 2019 or Later
 
-include::partial$include-nav-steps-AM-user-permission.adoc
+include::partial$include-nav-steps-AM-user-permission.adoc[]
 
 . Click *Settings*.
 . Select *CloudHub*.
